      - default: 500.0
      - How much it costs to reclaim a ruined town.
      - This is only applicable if the town-ruins & town-reclaim features are enabled.
    - town_ruining.town_ruins.enabled", 
      - default: false
      - If this is true, then if a town falls, it remains in a 'ruined' state for a time.
      - In this state, the town cannot be claimed, but can be looted.
      - The feature prevents mayors from escaping attack/occupation, by deleting then quickly recreating their town.
    - town_ruining.town_ruins.max_duration_hours
      - default: 72
      - This value determines the maximum duration in which a town can lie in ruins.
      - After this time is reached, the town will be completely deleted.
      - Does not accept values greater than 1000.
    - town_ruining.town_ruins.min_duration_hours
      - default: 4
      - This value determines the minimum duration in which a town must lie in ruins, before it can be reclaimed by a resident.
    - town_ruining.town_ruins.reclaim_enabled
      - default: true
      - If this is true, then after a town has been ruined for the minimum configured time,",
      - it can then be reclaimed by any resident who runs /t reclaim, and pays the required price. (price is configured in the eco section)
  - Bump language files to 0.92.
0.96.5.2:
  - Make TownRuin ruin-deletion recognize an improperly set ruinTime. 
  - Fix for console TownyWorld discretes, courtesy of FrankHeijden with PR #4484.
  - Ensure Objects are properly assigned, closed, and compared to improve safety and accuracy, courtesy of TheFlagCourier with PR #4496.
  - Fix TARGET spam for servers not running MC 1.16+.
  - Internal player name change handling.
    - Players who have their names changed will have their Resident updated by Towny directly.
    - TownyNameUpdater will no longer be required, will disable itself if present.
  - Fix '/ta reload config' not also reloading the town and nation levels in the config.  