@@ -5429,3 +5429,5 @@ v0.92.0.11:
     - Players who have their names changed will have their Resident updated by Towny directly.
     - TownyNameUpdater will no longer be required, will disable itself if present.
   - Fix '/ta reload config' not also reloading the town and nation levels in the config.  
+  - Fix cases where we weren't removing the underscores out of town and nation names.
+    - Works towards completing #4489.
